Bug 1473047 - Re-resolve row-gap percentages after intrinsic block size calculated. r=dholbert

MozReview-Commit-ID: EHX1WFvqwr1